force-app/main/default/objects/Food__c/fields/Chef__c.field-meta.xml
<CustomField>
    <fullName>Chef__c</fullName>
    <label>Chef</label>
    <referenceTo>Chef__c</referenceTo>
    <relationshipLabel>Foods</relationshipLabel>
    <relationshipName>Foods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>