force-app/main/default/objects/Food__c/fields/Dietary__c.field-meta.xml
<CustomField>
    <fullName>Dietary__c</fullName>
    <label>Dietary</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DairyFree</fullName>
                <label>Dairy Free</label>
            </value>
            <value>
                <fullName>GlutenFree</fullName>
                <label>Gluten Free</label>
            </value>
            <value>
                <fullName>Helal</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>