force-app/main/default/objects/Food__c/fields/Food_Location__c.field-meta.xml
<CustomField>
    <fullName>Food_Location__c</fullName>
    <formula>Chef__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Food Location</label>
    <type>Text</type>
</CustomField>