force-app/main/default/objects/Food__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Public image link for the Food Marketing site, set automatically by CatalogImagePublisher when an image file is attached.</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>