force-app/main/default/objects/Food__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <description>A detailed list of the ingredients required for the recipe</description>
    <label>Ingredients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>