force-app/main/default/objects/Food__c/fields/Prep_Time__c.field-meta.xml
<CustomField>
    <fullName>Prep_Time__c</fullName>
    <formula>LEFT(RIGHT(text( Preparation_Time__c  ),12),5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prep Time</label>
    <type>Text</type>
</CustomField>