force-app/main/default/objects/Food__c/fields/Preparation_Time__c.field-meta.xml
<CustomField>
    <fullName>Preparation_Time__c</fullName>
    <label>Preparation Time</label>
    <type>Time</type>
</CustomField>