force-app/main/default/objects/Food__c/fields/Servings__c.field-meta.xml
<CustomField>
    <fullName>Servings__c</fullName>
    <description>The number of servings the recipe makes</description>
    <label>Servings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>