force-app/main/default/objects/Food__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Chef__c</columns>
    <columns>Available__c</columns>
    <columns>Cuisine_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Dietary__c</columns>
    <columns>Ingredients__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>